--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 08:05:07 2018</p>
+         Last Run: Tue Dec  4 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,23 +34,23 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>7</td>
-                        <td>87</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>SSW</td>
-                        <td>9</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-14</td>
-                        <td>-19</td>
-                        <td>7</td>
                         <td>88</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>9</td>
+                        <td>12</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>-15</td>
+                        <td>-20</td>
+                        <td>7</td>
+                        <td>90</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>SSW</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>-15</td>
                         <td>-20</td>
                         <td>7</td>
-                        <td>92</td>
+                        <td>93</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>SSW</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-19",
-                 "-19",
+                 "-20",
                  "-20"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-14",
-                 "-14",
+                 "-15",
                  "-15"
                ]
              }
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "87",
                  "88",
-                 "92"
+                 "90",
+                 "93"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
-                 "9",
-                 "9"
+                 "12",
+                 "13",
+                 "10"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 08:05:07 2018</p>
+         Last Run: Tue Dec  4 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-7</td>
                         <td>-12</td>
                         <td>1</td>
-                        <td>61</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>53</td>
+                        <td>WSW</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -261,11 +261,11 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>0</td>
-                        <td>58</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>51</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -277,7 +277,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>64</td>
+                        <td>67</td>
                      </tr>
                   </tbody>
                </table>
@@ -386,8 +386,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
-                 "58",
+                 "60",
+                 "57",
                  "54"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "53",
-                 "51",
-                 "64"
+                 "55",
+                 "55",
+                 "67"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 08:05:07 2018</p>
+         Last Run: Tue Dec  4 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -465,10 +465,10 @@
                         <td>-7</td>
                         <td>2</td>
                         <td>75</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>51</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -480,7 +480,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>51</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -488,10 +488,10 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>52</td>
                      </tr>
                   </tbody>
@@ -603,7 +603,7 @@
                "data":[
                  "75",
                  "69",
-                 "64"
+                 "65"
                ]
              },
              {
@@ -612,8 +612,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "51",
-                 "51",
+                 "48",
+                 "50",
                  "52"
                ]
              }
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 08:05:07 2018</p>
+         Last Run: Tue Dec  4 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -678,8 +678,8 @@
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>5</td>
-                        <td>76</td>
+                        <td>4</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
@@ -690,20 +690,20 @@
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>76</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>50</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-4</td>
-                        <td>-8</td>
-                        <td>5</td>
-                        <td>78</td>
+                        <td>-5</td>
+                        <td>-10</td>
+                        <td>4</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -736,7 +736,7 @@
                "data":[
                  "-8",
                  "-9",
-                 "-8"
+                 "-10"
                ]
              },
              {
@@ -748,7 +748,7 @@
                "data":[
                  "-3",
                  "-4",
-                 "-4"
+                 "-5"
                ]
              }
            ]
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "5"
+                 "4",
+                 "4",
+                 "4"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "75",
                  "76",
-                 "76",
-                 "78"
+                 "77"
                ]
              },
              {
@@ -828,7 +828,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "50",
-                 "50",
+                 "49",
                  "49"
                ]
              }
