--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 13:05:02 2018</p>
+         Last Run: Tue Dec  4 14:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>7</td>
-                        <td>87</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SSW</td>
-                        <td>9</td>
+                        <td>S</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>-15</td>
                         <td>-20</td>
                         <td>7</td>
-                        <td>88</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>9</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>-16</td>
                         <td>-21</td>
                         <td>7</td>
-                        <td>91</td>
+                        <td>89</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SSW</td>
-                        <td>11</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "87",
-                 "88",
-                 "91"
+                 "86",
+                 "86",
+                 "89"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
-                 "9",
-                 "11"
+                 "8",
+                 "8",
+                 "10"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 13:05:02 2018</p>
+         Last Run: Tue Dec  4 14:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -253,7 +253,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>50</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -265,7 +265,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>51</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -277,7 +277,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>67</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
                  "51",
-                 "67"
+                 "52",
+                 "68"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 13:05:02 2018</p>
+         Last Run: Tue Dec  4 14:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>2</td>
-                        <td>70</td>
+                        <td>3</td>
+                        <td>73</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>34</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-5</td>
+                        <td>Clear</td>
+                        <td>0</td>
+                        <td>-4</td>
                         <td>2</td>
                         <td>66</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>36</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>1</td>
-                        <td>-3</td>
-                        <td>2</td>
+                        <td>-2</td>
+                        <td>1</td>
                         <td>62</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SW</td>
-                        <td>38</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,8 +520,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-5",
-                 "-3"
+                 "-4",
+                 "-2"
                ]
              },
              {
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-1",
+                 "0",
                  "1"
                ]
              }
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "3",
                  "2",
-                 "2",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
+                 "73",
                  "66",
                  "62"
                ]
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "34",
-                 "36",
-                 "38"
+                 "19",
+                 "23",
+                 "27"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 13:05:02 2018</p>
+         Last Run: Tue Dec  4 14:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,38 +676,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-7</td>
-                        <td>5</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>4</td>
                         <td>73</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>48</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>5</td>
-                        <td>74</td>
+                        <td>4</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>45</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-4</td>
-                        <td>-8</td>
-                        <td>15</td>
-                        <td>75</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>14</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-6",
                  "-7",
-                 "-7",
-                 "-8"
+                 "-7"
                ]
              },
              {
@@ -746,9 +746,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-2",
                  "-3",
-                 "-3",
-                 "-4"
+                 "-3"
                ]
              }
            ]
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "15"
+                 "4",
+                 "4",
+                 "14"
                ]
              },
              {
@@ -817,8 +817,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "73",
-                 "74",
-                 "75"
+                 "73",
+                 "74"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "48",
-                 "45",
-                 "43"
+                 "56",
+                 "54",
+                 "52"
                ]
              }
            ]
