--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 14:05:06 2018</p>
+         Last Run: Tue Dec  4 15:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -38,15 +38,15 @@
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>8</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-15</td>
-                        <td>-20</td>
+                        <td>-14</td>
+                        <td>-19</td>
                         <td>7</td>
-                        <td>86</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -58,7 +58,7 @@
                         <td>-16</td>
                         <td>-21</td>
                         <td>7</td>
-                        <td>89</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SSW</td>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-19",
-                 "-20",
+                 "-19",
                  "-21"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-14",
-                 "-15",
+                 "-14",
                  "-16"
                ]
              }
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "86",
-                 "86",
-                 "89"
+                 "85",
+                 "87"
                ]
              },
              {
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "8",
+                 "9",
                  "8",
                  "10"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 14:05:06 2018</p>
+         Last Run: Tue Dec  4 15:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -248,12 +248,12 @@
                         <td>Partly Cloudy</td>
                         <td>-7</td>
                         <td>-12</td>
-                        <td>1</td>
-                        <td>60</td>
+                        <td>0</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>51</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -265,19 +265,19 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>52</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
                         <td>1</td>
                         <td>55</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>WSW</td>
-                        <td>68</td>
+                        <td>W</td>
+                        <td>55</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
+                 "0",
                  "1",
                  "1"
                ]
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
+                 "61",
                  "58",
                  "55"
                ]
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "51",
-                 "52",
-                 "68"
+                 "47",
+                 "48",
+                 "55"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 14:05:06 2018</p>
+         Last Run: Tue Dec  4 15:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -486,11 +486,11 @@
                         <td>02:00 PM</td>
                         <td>Clear</td>
                         <td>1</td>
-                        <td>-2</td>
+                        <td>-3</td>
                         <td>1</td>
                         <td>62</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SW</td>
                         <td>27</td>
                      </tr>
@@ -521,7 +521,7 @@
                "data":[
                  "-6",
                  "-4",
-                 "-2"
+                 "-3"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 14:05:06 2018</p>
+         Last Run: Tue Dec  4 15:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -702,7 +702,7 @@
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>74</td>
                         <td>0</td>
                         <td>10</td>
@@ -807,7 +807,7 @@
                "data":[
                  "4",
                  "4",
-                 "14"
+                 "13"
                ]
              },
              {
